fix: update incorrect spacing class names

--- a/src/once-ui/styles/spacing.scss
+++ b/src/once-ui/styles/spacing.scss
@@ -1208,12 +1208,12 @@
     padding-bottom: var(--static-space-40);
 }
 
-.pr-48 {
-    padding-right: var(--static-space-48);
+.pb-48 {
+    padding-bottom: var(--static-space-48);
 }
 
-.pr-56 {
-    padding-right: var(--static-space-56);
+.pb-56 {
+    padding-bottom: var(--static-space-56);
 }
 
 .pb-64 {
